--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,5 @@ Maintainer: The package maintainer <davi.moreira@gmail.com>
 Description: Functions and data for txt4cs book project: <https://bookdown.org/davi_moreira/txt4cs/>. 
 License: CC BY-NC-SA 4.0.
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 RoxygenNote: 6.1.1
